# dawgdic

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  dawgdic.cabal
app/: Main.hs
bench/: Main.hs
data/: lexicon.10000.txt  lexicon.guide.dic  lexicon.ranked.dic
dawgdic-comparison/: Main.hs  cabal.project.local  dawgdic-comparison.cabal
dawgdic-comparison/data/: lexicon.10.txt  lexicon.10.v.txt  lexicon.100.txt  lexicon.100.v.txt  lexicon.1000.txt  lexicon.1000.v.txt
src-trace/Data/DAWG/: Trace.hs
src/Data/DAWG/: Build.hs  Completer.hs  DAWG.hs  Dictionary.hs  Find.hs  Guide.hs  RankedCompleter.hs  RankedGuide.hs  Test.hs
src/Data/DAWG/Internal/: BaseType.hs  BaseUnit.hs  Completer.hs  DAWG.hs  DAWGBuilder.hs  DAWGUnit.hs  Dictionary.hs  DictionaryBuilder.hs  DictionaryExtraUnit.hs  DictionaryUnit.hs  Guide.hs  GuideBuilder.hs  GuideUnit.hs  LinkTable.hs  RankedCompleter.hs  RankedCompleterCandidate.hs  RankedCompleterNode.hs  RankedGuide.hs  RankedGuideBuilder.hs  RankedGuideLink.hs  Stack.hs
src/Data/Primitive/PrimArray/: Combinators.hs
test/Data/DAWG/: BuildSpec.hs  CompleterSpec.hs  DictionarySpec.hs  RankedCompleterSpec.hs
